<resources>
    <string name="app_name"> </string>
    <string name="punchMyTime">Punch My Time</string>
    <string name="usernameInputLoginPageHint">Username</string>
    <string name="passwordLoginPageHint">Password</string>
    <string name="hideshowpassword">show/hide</string>
    <string name="forgorpasswordTextLogin">Forgot password</string>
    <string name="newuserText">New user</string>
    <string name="loginBtnText">LOGIN</string>
    <string name="registrationTitle">"REGISTER "</string>
    <string name="registerUsername">Username</string>
    <string name="usernameRegistrationPage">Username</string>
    <string name="registerBtn">REGISTER</string>
    <string name="titleforgotPassword">Forgot Your Password, Eh?</string>
    <string name="titleforgotpassword2">NO WORRIES!</string>
    <string name="forgorpwparagraph">We will send an email to reset your password after getting your username and email.</string>
    <string name="forgotPAsswordResetButtonTxt">RESET</string>
    <string name="txtGreetings">Hello, UserName!</string>
    <string name="btnaddNew">Add New Shift</string>
    <string name="btnEdit">Edit Shift</string>
    <string name="txtSchedule">Your Work Schedule</string>
    <string name="companyNameNewHours">Company</string>
    <string name="txtNewEmployer">New Company/Role/Rate</string>
    <string name="txtWorkingHours">Please enter the hours you\'ll work :</string>
    <string name="btnAddNewHour">Submit</string>
    <string name="txtTimeFrom">From</string>
    <string name="txtTimeTo">To</string>
    <string name="editTextNewCompName">Company Name</string>
    <string name="editTextNewRoleName">Role</string>
    <string name="editTextNewRateName">Hourly Rate</string>
    <string name="textViewNeCoPaLocation">Location</string>
    <string name="btnNeCoRoRaAdd">Add</string>
    <string name="addnewshift">ADDNEWSHIFT</string>
    <string name="editshift">EDITSHIFT</string>
    <string name="home">Home</string>
    <string name="profile"> My Profile</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile_group">Profile</string>
    <string name="txtProfileTitle">Profile Information</string>
    <string name="txtusername">Username:</string>
    <string name="txtProfileFirstName">First Name:</string>
    <string name="txtProfileLastName">Last Name:</string>
    <string name="txtProfileEmail">Email:</string>
    <string name="txtProfilePassword">Password:</string>
    <string name="txtProfilePhoneNumber">Phone Number:</string>
    <string name="btnUpdateProfile">Update Profile</string>
    <string name="txtTitleTotalEarning">Total Earning:</string>
    <string name="titleLogHistory">My Punch History</string>


</resources>