<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/punchMyViewImage"
        android:layout_width="215dp"
        android:layout_height="206dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/punchmytime_image" />

    <TextView
        android:id="@+id/punchMyTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/punchMyTime"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/punchMyViewImage"
        tools:text="@string/app_name" />

    <EditText
        android:id="@+id/usernameInputLoginPage"
        android:layout_width="268dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/usernameInputLoginPageHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/punchMyTimeTitle" />

    <EditText
        android:id="@+id/passwordInputLoginPage"
        android:layout_width="267dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/passwordLoginPageHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputLoginPage" />

    <TextView
        android:id="@+id/forgotButtonTxtLoginPage"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/forgorpasswordTextLogin"
        app:layout_constraintEnd_toEndOf="@+id/passwordInputLoginPage"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLoginPage" />

    <TextView
        android:id="@+id/newUserTextLoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="280dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/newuserText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordInputLoginPage"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLoginPage" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLoginPage" />


</androidx.constraintlayout.widget.ConstraintLayout>