<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileInfoActivity">

    <TextView
        android:id="@+id/txtProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/txtProfileTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtUsernameTitle"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/txtusername"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProfileTitle" />

    <TextView
        android:id="@+id/txtProfileUsername"
        android:layout_width="141dp"
        android:layout_height="24dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/txtUsernameTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtProfileTitle" />

    <EditText
        android:id="@+id/editTextProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/txtProfileEmail"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/txtEmailTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtProfileUsername" />

    <TextView
        android:id="@+id/txtEmailTitle"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/txtProfileEmail"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameTitle" />

    <EditText
        android:id="@+id/editTextProfilePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/txtfirstNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfileEmail" />

    <TextView
        android:id="@+id/txtPasswordTitle"
        android:layout_width="87dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/txtProfileFirstName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfirstNameTitle" />

    <TextView
        android:id="@+id/txtfirstNameTitle"
        android:layout_width="81dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="38dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/txtProfilePassword"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailTitle" />

    <EditText
        android:id="@+id/editTextProfilefisrtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="first name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/txtPasswordTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfilePassword" />

    <TextView
        android:id="@+id/txtLastNameTitle"
        android:layout_width="89dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/txtProfileLastName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordTitle" />

    <EditText
        android:id="@+id/editTextProfilelastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="last name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/txtLastNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfilefisrtname" />

    <TextView
        android:id="@+id/txtPhoneTitle"
        android:layout_width="117dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/txtProfilePhoneNumber"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLastNameTitle" />

    <EditText
        android:id="@+id/editTextProfilephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="phone"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/txtPhoneTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfilelastName" />

    <Button
        android:id="@+id/btnUpdateProfileInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/btnUpdateProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>